# allpackages

./: CLOUD.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-image.yml  test.yml  update-metadata.yml
src/: dcf.rs  main.rs
